<resources>
    <string name="app_name">NED-Cuentas</string>
    <string name="addEntry_name">Agregar</string>
    <string name="itemInfo_name">Datos</string>
    <string name="dataSearch_name">Lista de movimientos</string>
    <string name="addProfile_name">Agregar estado financiero</string>
    <string name="balance_name">Balance del mes</string>
    <string name="balance_period_name">Balance del periodo</string>
    <string name="balance_custom_name">Balance personalizado</string>
    <string name="save_name">Ahorro</string>
    <string name="report_name">Reporte por categorías</string>
    <string name="search_name">Explorar</string>
    <string name="categories_name">Categorías</string>
    <string name="debt_name">Deudas</string>
    <string name="editEntry_name">Editar movimiento</string>
    <string name="editProfile_name">Editar estado financiero</string>
    <string name="eula_name">EULA</string>
    <string name="help_name">Ayuda</string>
    <string name="helpConceptsName">Conceptos</string>
    <string name="helpFunctionsName">Funciones</string>
    <string name="welcome_title1">¡Felicidades!</string>
    <string name="welcome_title2">Te recompensamos</string>
    <string name="welcome_title3">Gratuita</string>
    <string name="welcome_title4">Contáctalo</string>
    <string name="welcome_subtitle1">¡tomaste una exelente decisión! Queremos que tus finanzas realmente mejoren, es por eso que…</string>
    <string name="welcome_subtitle2">al adquirir nuestra app, y te ofrecemos de forma…</string>
    <string name="welcome_subtitle3">un asesor financiero, para que resuelva todas tus consultas de manera personalizada.</string>
    <string name="welcome_subtitle4">vía WhatsApp, a través del siguiente botón</string>
    <string name="welcome_imageWATitle">Contactar asesor</string>
    <string name="welcome_imageDecr">Imagen para representar pagina</string>
    <string name="welcome_imageButtonDecr">aceptar</string>
    <string name="month_January">Enero</string>
    <string name="month_February">Febrero</string>
    <string name="month_March">Marzo</string>
    <string name="month_April">Abril</string>
    <string name="month_May">Mayo</string>
    <string name="month_June">Junio</string>
    <string name="month_July">Julio</string>
    <string name="month_August">Agosto</string>
    <string name="month_September">Septiembre</string>
    <string name="month_October">Octubre</string>
    <string name="month_November">Noviembre</string>
    <string name="month_December">Diciembre</string>
    <string name="activity_add_profile_hint_nombre">Nombre del estado</string>
    <string name="activity_addprofile_categoryInitial">Saldo inicial</string>
    <string name="activity_add_profile_hint_period">Día del mes</string>
    <string name="activity_add_profile_hint_saldoInicial">Saldo inicial</string>
    <string name="activity_add_profile_button_ingresar">Agregar</string>
    <string name="activity_add_profile_msg_samename">El estado ya existe</string>
    <string name="activity_add_entry_textView_category">Categoría:</string>
    <string name="activity_edit_entry_textView_profile">Estado financiero:</string>
    <string name="activity_add_profile_switch_agregarSaldoInicial">Saldo inicial</string>
    <string name="activity_add_profile_switch_periodo">Ciclo definido</string>
    <string name="activity_add_profile_helpButton_initialprofit_descr">Descripción de la funcion del boton saldo inicial</string>
    <string name="activity_add_profile_helpButton_period_descr">Descripción de la funcion del boton perido definido</string>
    <string name="activity_main_slidinguppanel_title">Info</string>
    <string name="activity_main_slidinguppanel_weblinkHeader">Visita nuestro sitio web:</string>
    <string name="activity_main_slidinguppanel_webLink">nuevaescueladigital.com</string>
    <string name="activity_main_slidinguppanel_subscribeHeader">Recibirás información, recursos educativos y herramientas gratuitas al suscribirte</string>
    <string name="activity_main_slidinguppanel_SubscribeInfo">Suscríbete pulsando el logo</string>
    <string name="fragment_search_period_period_header">Día de corte:</string>
    <string name="fragment_search_textView_type_spinner">Tipo de movimiento:</string>
    <string name="fragment_search_period_title">Periodo:</string>
    <string name="fragment_search_period_checkboxTitle">Por periodo definido</string>
    <string name="fragment_search_dates_radioButtonTitle">Por periodo</string>
    <string name="fragment_search_period_title_all">Todo</string>
    <string name="fragment_search_textview_filtro">Filtro:</string>
    <string name="fragment_search_textview_inicio">Desde</string>
    <string name="fragment_search_textview_dia">Dia</string>
    <string name="fragment_search_textview_mes">Mes</string>
    <string name="fragment_search_textview_anyo">Año</string>
    <string name="fragment_search_checkbox_principio">Desde el principio</string>
    <string name="fragment_search_textview_final">Hasta</string>
    <string name="fragment_search_checkox_hastahoy">Hasta el final</string>
    <string name="fragment_search_button_buscar">Buscar</string>
    <string name="fragment_search_button_datebeg">Fecha</string>
    <string name="fragment_search_button_datefinal">Fecha</string>
    <string name="fragment_search_checkbox_saldoalmes">Por mes</string>
    <string name="fragment_balance_textView_titleBalance">El balance para el mes en curso es</string>
    <string name="fragment_balance_textView_ingresos">Ingresos:</string>
    <string name="fragment_balance_textView_gastos">Gastos:</string>
    <string name="fragment_balance_textView_actualbalance">Balance</string>
    <string name="fragment_balance_textView_balanceplusrem">Balance + Remanentes</string>
    <string name="fragment_balance_class_remnantDescription">Remanentes</string>
    <string name="fragment_saving_radioButton_abono">Abono</string>
    <string name="fragment_saving_radioButton_amount">Monto</string>
    <string name="fragment_saving_radioButton_retiro">Retiro</string>
    <string name="fragment_saving_checkbox_addSpend">Agregar como GASTO en balance general</string>
    <string name="dialog_about_version">V. 1.0.0</string>
    <string name="dialog_about_companyName">Nueva Escuela Digital</string>
    <string name="dialog_about_authorsTitle">Equipo NED</string>
    <string name="dialog_about_authorName1">Jeremy Rodríguez Solórzano</string>
    <string name="dialog_about_authorName2">Jose Mario Alvarado Núñez</string>
    <string name="dialog_about_authorName3">Johan Quesada Campos</string>
    <string name="dialog_about_imageDecr">app icon</string>
    <string name="nav_explore">Explorar movimientos</string>
    <string name="nav_month_balance">Balance mensual</string>
    <string name="nav_add_profile">Agregar estado financiero</string>
    <string name="nav_conf_profile">Configurar estado</string>
    <string name="nav_exit">Salir</string>
    <string name="activityHelp_title1">Conceptos</string>
    <string name="activityHelp_subtitle1">Estado financiero:</string>
    <string name="activityHelp_content1">Se refiere a cualquier entidad que represente gastos y/o ingresos económicos, ya sea un negocio o franquicia (supermercado, tienda), cuenta personal, cuenta bancaria, tarjeta de cŕedito, entre otras.</string>
    <string name="activityHelp_subtitle2">Saldo inicial:</string>
    <string name="activityHelp_content2">Saldo con el que se desea iniciar un estado financiero en el momento de ser creado.</string>
    <string name="activityHelp_subtitle3">Ciclo definido:</string>
    <string name="activityHelp_content3">Día del mes definido como fecha de corte para mostrar un balance. El balance dado por esta opción se muestra en la pantalla Balance del ciclo definido, donde se toma en cuenta el periodo que abarca desde el mes anterior en el día definido, hasta el mes siguiente en el mismo día definido.</string>
    <string name="activityHelp_subtitle4">Remanentes:</string>
    <string name="activityHelp_content4">Saldo sobrante del mes anterior.</string>
    <string name="activityHelp_subtitle5">Movimiento:</string>
    <string name="activityHelp_content5">Representa un ingreso o gasto, contiene como información: la descripción, fecha, hora, monto y categoría.</string>
    <string name="activityHelp_title2">Funciones</string>
    <string name="activityHelp_subtitle6">Agregar movimiento:</string>
    <string name="activityHelp_content6">Se ingresa mediante el botón flotante ubicado en la esquina inferior derecha, permite agregar 4 tipos de entradas:</string>
    <string name="activityHelp_content6_1">Movimiento común: Gasto o Ingreso.</string>
    <string name="activityHelp_content6_2">Ahorro: Abonar o retirar del ahorro propio del estado financiero. Se puede agregar la opción de ingresar dicho abono o retiro como un movimiento común (Gasto o Ingreso) en el balance general.</string>
    <string name="activityHelp_content6_3">Transferencia: Permite transferir fondos de un estado financiero a otro, se agrega como movimiento común en ambos estados, y se almacena en la categoría Transferencia</string>
    <string name="activityHelp_content6_4">Deuda: Agrega una nueva deuda, visible en la sección Deudas del panel principal.</string>
    <string name="activityHelp_subtitle7">Explorar movimientos:</string>
    <string name="activityHelp_content7">Permite definir filtros de búsqueda para explorar los movimientos deseados. Se puede filtrar por categoría, Tipo (Ingreso o gasto) y por periodo. Entre las opciones de periodo están:</string>
    <string name="activityHelp_content7_1">Por periodo definido: Periodo que se encuentra entre los días del mes definido como periodo definido al crear el estado financiero.</string>
    <string name="activityHelp_content7_2">Por mes: Explora los movimientos definidos en un mes dado por el usuario.</string>
    <string name="activityHelp_content7_3">Por periodo: Rango de fechas específicas.</string>
    <string name="activityHelp_content7_4">El resultado es una pantalla que contiene todos los movimientos encontrados en la base de datos, junto con el total de ingreso, gasto y balance, además de una opción para descargar un archivo XLS con los movimientos.</string>
    <string name="activityHelp_subtitle8">Balance general:</string>
    <string name="activityHelp_content8">Muestra total de ingresos, gastos y balance del mes actual, además de remanentes del mes anterior y balance con los remanentes sumados.</string>
    <string name="activityHelp_subtitle9">Categorías:</string>
    <string name="activityHelp_content9">Muestra la lista de categorías. Existen tres categorías principales estáticas: Ahorro, transferencia y otros, además, se pueden crear hasta 22 categorías nuevas, todas ellas distintas para cada estado financiero. Cada una muestra la opción de editar (nombre e ícono) y eliminar.</string>
    <string name="activityHelp_subtitle10">Ahorro:</string>
    <string name="activityHelp_content10">Permite visualizar el estado actual del fondo de ahorro del estado financiero.</string>
    <string name="activityHelp_subtitle11">Reporte por categorías:</string>
    <string name="activityHelp_content11">Visualiza el monto total y porcentaje en cada categoría, además de los movimientos de cada una. Esto en un periodo definido en la parte superior. Se muestra por separado el resultado para ingresos, gastos y las gráficas circulares que representan los porcentajes de gasto e ingreso en cada categoría, también permite descargar el archivo XLS con los datos</string>
    <string name="activityHelp_subtitle12">Deudas:</string>
    <string name="activityHelp_content12">Muestra la lista de deudas creadas y pendientes para el estado financiero, cada deuda se puede eliminar, editar (Descripción, fecha y monto) o agregar o sustraer de la misma. Si se Sustrae un monto igual o superior al actual, el sistema le advierte al usuario y le permite eliminar la deuda.</string>
</resources>